deepfence_ui/app/scripts/components/common/df-table-v2/index.module.scss
.table {
  margin-left: 25px;
  margin-right: 25px;
  min-width: 100%;

  .headerCell {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    text-transform: capitalize;
    font-weight: 600;
    font-size: 14px;
    color: #ffffff;
    padding: 8px 12px;
    background-color: #202020;
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    .headerContent {
      width: 100%;
    }

    .headerCellResizer {
      width: 30px;
      height: 100%;
      touch-action: none;
    }

    .sortIndicator {
      margin-left: 8px;
    }
  }

  .headerOverflowShown {
    overflow: visible;
  }

  .row {
    &.oddRow {
      background: rgba(216, 216, 216, 0.02);
    }
    &.expandableRow {
      cursor: pointer;
    }

    &:hover {
      background: rgba(70, 70, 70, 0.5);
    }

    .cell {
      font-size: 14px;
      font-weight: normal;
      color: #c0c0c0;
      padding: 8px 12px;

      .expanderCell {
        width: 100%;
        height: 100%;
        display: flex;
        justify-items: center;
        align-items: center;
        margin-left: 4px;
      }
    }
  }

  .noDataPlaceholder {
    height: 150px;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .wrap {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
  }
}

.paginationWrapper {
  text-align: right;
  margin-bottom: 10px;
  margin-top: 10px;
  margin-right: 25px;
}

.tableContainer {
  position: relative;
}

.loader {
  left: 50%;
}

.multiSelectActions {
  right: 0px;
  top: 0px;
  text-align: center;
  margin-right: 60px;
  font-size: 14px;
  font-weight: bold;
  position: absolute;
  display: flex;
  align-items: center;
  background-color: #202020;
  color: #FFFFFF;
  height: 40px;

  :global(.fa.active-color) {
    background-color: #007FFF;
    color: #FFFFFF;
  }

  :global(.fa) {
    font-size: 20px;
    background-color: #383838;
    padding-left: 20px;
    padding-right: 20px;
    margin-right: 6px;
    padding-top: 5px;
    padding-bottom: 5px;
    border-radius: 4px;
  }
}
.actionIcon {
  font-size: 20px;
  background-color: #383838;
  padding-left: 20px;
  padding-right: 20px;
  margin-right: 6px;
  padding-top: 5px;
  padding-bottom: 5px;
  border-radius: 4px;
}

.clickableRow {
  cursor: pointer;
}

